--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@
 @tailwind utilities;
 
 body {
-  /* background-color: #111; */
-  /* background-image: url('https://wallpapercave.com/wp/wp10209280.jpg');  */
+  background-color: #111;
+  background-image: url('https://wallpapercave.com/wp/wp10209280.jpg'); 
   background-size: cover;
   background-position: center;
   color: #f1f1f1;
